# DynamicLibraryTest

./: Base.cpp  CMakeLists.txt  Database.cpp  Entity.cpp  EntityRegisterer.cpp  GameplayScript.cpp  GameplayScript2.cpp  LICENSE  SomeProperty.cpp  Type.cpp  main.cpp  runtest.sh
.github/workflows/: run_tests_linux.yml  run_tests_macos.yml  run_tests_windows.yml
Include/: Base.h  Config.h  Database.h  Entity.h  EntityRegisterer.h  GameConfig.h  GameplayScript.h  GameplayScript2.h  SomeProperty.h  Type.h
